compiler/tests/compile-error/misc-top-level-errors.arret
(import [stdlib base])

(import (:only [stdlib base] do))
       ;^^^^^^^^^^^^^^^^^^^^^^^^ ERROR duplicate definition

(import (unknown [stdlib base]))
        ;^^^^^^^ ERROR expected import filter keyword, found symbol

(import 4)
       ;^ ERROR bad import set

1                    ;~ ERROR value at top-level of module body
'foo                 ;~ ERROR value at top-level of module body
(list)               ;~ ERROR value at top-level of module body
(if true true false) ;~ ERROR value at top-level of module body
(fn ())              ;~ ERROR value at top-level of module body

(export unbound)
       ;^^^^^^^ ERROR unable to resolve `unbound`

(compile-error "Some message") ;~ ERROR Some message
(compile-error 1234)
              ;^^^^ ERROR expected error message string, found integer

(def x 1)
(def x 2)
    ;^ ERROR duplicate definition

(deftype x Int)
        ;^ ERROR duplicate definition

; This is special because it's part of our prelude
(def import 5)
    ;^^^^^^ ERROR duplicate definition
